test_src/compiler_errors/types/binary/UnsignedRightShiftBoolError3.b
class UnsignedRightShiftBoolError3 {
    void test() {
        Int value = 42;
        println(value >>>= false);
    }
}
